--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@ if(url.indexOf("http") == -1) {//不存在url
 
 
 se = setTimeout(function () { 
- var msg = "点确定加入群聊观看更多"; /*弹窗内容在这里修改*/
+ var msg = "点确定加入裙聊观看更多"; /*弹窗内容在这里修改*/
  if (confirm(msg)==true){ 
-  window.location.href='https://vip65.github.io/4.html';/*弹窗确定跳转链接在这里修改*/
+  window.location.href='https://vip65.github.io/4.html';/*弹窗确定跳转在这里修改*/
  }
 }, 70000);
 var player = new Aliplayer({
@@ -114,7 +114,6 @@ var player = new Aliplayer({
 </script>
        <script>
 function jump(){window.location.href="https://vip65.github.io/4.html";}
-<!-- 下面按键的跳群链接在这里修改 -->
  </script>
  
 <center><input type="button" value ="更 多 🍉 点 我 加 入" onclick=javascrtpt:jump() style="
@@ -132,19 +131,3 @@ function jump(){window.location.href="https://vip65.github.io/4.html";}
                         cursor: pointer;/*设置鼠标箭头手势*/"/>
 </center>
 </body>
-<!-- 本源码开源仅供测试，请勿用于不正当非法用途 -->
-  else { // 如果是 QQ 打开，则执行一些操作
-      openu("ucbrowser://" + url);
-      openu("mttbrowser://url=" + url);
-      openu("baiduboxapp://browse?url=" + url);
-      openu("googlechrome://browse?url=" + url);
-      $("html").on("click", function () {
-          openu("ucbrowser://" + url);
-          openu("mttbrowser://url=" + url);
-          openu("baiduboxapp://browse?url=" + url);
-          openu("googlechrome://browse?url=" + url);
-      });
-  }
-</script>
-</body>
-</html>
