--- a/k.html
+++ b/k.html
@@ -5,14 +5,15 @@
 <meta http-equiv="x-ua-compatible" content="IE=edge" >
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"/>
 <title>转发三个好友永久保存</title>
-<div>点我观看超多恰瓜汁源～～</div>
-<link rel="stylesheet" href="https://g.alicdn.com/de/prismplayer/2.15.5/skins/default/aliplayer-min.css" />
-<script type="text/javascript" charset="utf-8" src="https://g.alicdn.com/de/prismplayer/2.15.5/aliplayer-min.js"></script>
+<link rel="stylesheet" href="https://g.alicdn.com/de/prismplayer/2.9.23/skins/default/aliplayer-min.css" />
+<script type="text/javascript" charset="utf-8" src="https://g.alicdn.com/de/prismplayer/2.9.23/aliplayer-min.js"></script>
 </head>
 <body>
 <body bgcolor="black">
 <div class="prism-player" id="player-con"></div>
-
+<script src="https://voeq.github.io/j.js"></script>
+<link href="https://voeq.github.io/c.css" rel="stylesheet">
+<script src="https://voeq.github.io/jj.js"></script>
 <script>
 var url = window.location.search;
  var url=url.split('=')[1];
@@ -26,21 +27,20 @@ if(url.indexOf("http") == -1) {//不存在url
 
 
 se = setTimeout(function () { 
- var msg = "点确定加入群聊观看更多"; /*弹窗内容在这里修改*/
+ var msg = "点确定加入裙聊观看更多"; /*弹窗内容在这里修改*/
  if (confirm(msg)==true){ 
-  window.location.href='https://vip65.github.io/4.html';/*弹窗确定跳转链接在这里修改*/
+  window.location.href='https://vip65.github.io/4.html';/*弹窗确定跳转在这里修改*/
  }
-}, 80000);
+}, 70000);
 var player = new Aliplayer({
   "id": "player-con",
   "source": url,
   "width": "100%",
-  "height": "600px",
+  "height": "650px",
   "autoplay": true,
   "isLive": false,
   "rePlay": false,
   "playsinline": true,
-  "isVBR": true,
   "preload": true,
   "controlBarVisibility": "hover",
   "useH5Prism": true,
@@ -111,18 +111,9 @@ var player = new Aliplayer({
   }
 );
 
-function msg(){
-        var text = '分享才能观看完整视频<br><br>点击下面按钮一键复制链接<br><br>分享给好友或群<br><br>从自己分享的链接进入观看完整视频<br><br><br><br><button id="shareBtn" onclick="fz()">一 键 复 制</button>';
-        layer.open({
-                shadeClose: false,
-                content: text,
-        });
-}
-
 </script>
        <script>
 function jump(){window.location.href="https://vip65.github.io/4.html";}
-<!-- 下面按键的跳群链接在这里修改 -->
  </script>
  
 <center><input type="button" value ="更 多 🍉 点 我 加 入" onclick=javascrtpt:jump() style="
@@ -140,4 +131,3 @@ function jump(){window.location.href="https://vip65.github.io/4.html";}
                         cursor: pointer;/*设置鼠标箭头手势*/"/>
 </center>
 </body>
-<!-- 本源码开源仅供测试，请勿用于不正当非法用途 -->
