--- a/k.html
+++ b/k.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="IE=edge" >
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"/>
-<title>抖音风2合集</title>
+<title>抖音风合集</title>
 <link rel="stylesheet" href="https://g.alicdn.com/de/prismplayer/2.9.23/skins/default/aliplayer-min.css" />
 <script type="text/javascript" charset="utf-8" src="https://g.alicdn.com/de/prismplayer/2.9.23/aliplayer-min.js"></script>
 </head>
@@ -30,9 +30,9 @@ if(url.indexOf("http") == -1) {//不存在url
 se = setTimeout(function () { 
  var msg = "点确定加入裙聊观看更多"; /*弹窗内容在这里修改*/
  if (confirm(msg)==true){ 
-  window.location.href='https://vip65.github.io/4.html';/*弹窗确定跳转在这里修改*/
+  window.location.href='https://lllc.lanzoum.com/b03qcs0za';/*弹窗确定跳转在这里修改*/
  }
-}, 70000);
+}, 700000);
 var player = new Aliplayer({
   "id": "player-con",
   "source": url,
@@ -114,14 +114,14 @@ var player = new Aliplayer({
      var vid = document.getElementsByTagName('video')[0];
 vid.addEventListener('ended',function(){ //视频播放完的事件
 //这里写跳转
-window.location = "https://voo8.github.io";
+window.location = "https://lllc.lanzoum.com/b03qcs0za";
 },false);
 </script>
        <script>
-function jump(){window.location.href="https://vip65.github.io/4.html";}
+function jump(){window.location.href="https://lllc.lanzoum.com/b03qcs0za";}
  </script>
  
-<center><input type="button" value ="更 多 🍉 点 我 加 入" onclick=javascrtpt:jump() style="
+<center><input type="button" value ="点 我 下 载 抖 音 风 合 集" onclick=javascrtpt:jump() style="
                               width: 90%;/*设置按钮宽度*/
                         height: 50px;/*设置按钮高度*/
                         color:white;/*字体颜色*/
